--- a/resources/public/css/library.css
+++ b/resources/public/css/library.css
@@ -6,10 +6,10 @@ body {
 
 label {
  margin-left:3em;
- font-size:3vw;
 }
 
 .container {
-  background-color:rgba(255,255,255, 10);
+  background-color:rgba(255,255,255, 0.3);
+  border-radius: 20%;
 } 
  
